[gd_scene load_steps=15 format=2]

[ext_resource path="res://BUATDEMO.tscn" type="PackedScene" id=1]
[ext_resource path="res://NODEDEMO.gd" type="Script" id=2]
[ext_resource path="res://Camera2D_1.gd" type="Script" id=3]
[ext_resource path="res://Camera2D_2.gd" type="Script" id=4]
[ext_resource path="res://bgtest.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/HUD/coin_gold.png" type="Texture" id=7]
[ext_resource path="res://HUD_2.gd" type="Script" id=8]
[ext_resource path="res://Minimap1.gd" type="Script" id=9]
[ext_resource path="res://Minimap2.gd" type="Script" id=10]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.247059 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 509.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 509, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
limit_smoothed = true
drag_margin_h_enabled = true
editor_draw_limits = true
script = ExtResource( 4 )

[node name="Background" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 5 )]

[node name="BUATDEMO" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 510, 600 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
limit_smoothed = true
drag_margin_h_enabled = true
editor_draw_limits = true
script = ExtResource( 3 )

[node name="Background" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 5 )]

[node name="Minimap" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -338.0
margin_top = -87.0
margin_right = -222.0
margin_bottom = 1.0
theme = SubResource( 1 )
stretch = true

[node name="Viewport2" type="Viewport" parent="Minimap"]
size = Vector2( 116, 88 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Minimap/Viewport2"]
current = true
zoom = Vector2( 12, 12 )
limit_bottom = 550
script = ExtResource( 10 )

[node name="Viewport" type="Viewport" parent="Minimap"]
size = Vector2( 116, 88 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Minimap/Viewport"]
current = true
zoom = Vector2( 12, 12 )
limit_bottom = 550
script = ExtResource( 9 )

[node name="Minimap2" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -247.0
margin_top = -90.0
margin_right = -131.0
margin_bottom = -2.0
theme = SubResource( 1 )
stretch = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_right = 70.0
margin_bottom = 58.0
custom_styles/panel = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
visible = false
margin_left = 457.0
margin_top = 13.0
margin_right = 518.0
margin_bottom = 74.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
expand = true

[node name="x" type="Label" parent="HUD"]
visible = false
margin_left = 490.0
margin_top = 16.0
margin_right = 509.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0.8, 0.113725, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"

[node name="Coins" type="Label" parent="HUD"]
visible = false
margin_left = 516.0
margin_top = 8.0
margin_right = 576.0
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 0.8, 0.113725, 1 )
custom_fonts/font = SubResource( 4 )
text = "##"
align = 1
